Closed
Bug 797801
Opened 13 years ago
Closed 13 years ago
[b2g-bluetooth] Cannot receive agent events after crash
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: gyeh, Assigned: gyeh)
Details
Attachments
(1 file, 1 obsolete file)
|
5.66 KB,
patch
|
Details | Diff | Splinter Review |
When our process crashed and reboot, no AdapterAdded signal will be received after then. As a result, tasks in PrepareAdapterTask like register agents and add reserve service uuid cannot be executed properly.
| Assignee | ||
Comment 1•13 years ago
|
||
Check whether default adapter path is available when we enable bluetooth. If it isn't ready, wait for signal AdapterAdded from dbus. Otherwise, we can do PrepareAdapterTask right away.
Well , this bug is kind of an error-handling since it should be an ab-normal situation.
Attachment #667897 -
Flags: review?(kyle)
Comment 2•13 years ago
|
||
Comment on attachment 667897 [details] [diff] [review]
v1 patch
Review of attachment 667897 [details] [diff] [review]:
-----------------------------------------------------------------
r=me with nits picked
::: dom/bluetooth/linux/BluetoothDBusService.cpp
@@ +1318,5 @@
>
> nsresult
> +GetDefaultAdapterPath(BluetoothValue& aValue, nsString& aError)
> +{
> + DBusError err;
Nit: Needs a thread assert, since it blocks.
Attachment #667897 -
Flags: review?(kyle) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
try server:
https://tbpl.mozilla.org/?tree=Try&rev=422356fe2072
https://tbpl.mozilla.org/?tree=Try&rev=de429113d36f
Attachment #667897 -
Attachment is obsolete: true
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in
before you can comment on or make changes to this bug.
Description
•