Bug 797801 - Final version: Cannot receive agent events after crash, r=qdot