dom/bluetooth/linux/BluetoothDBusService.cpp
@@ -150,7 +150,6 @@ static const char* sBluetoothDBusSignals[] =
 static nsAutoPtr<RawDBusConnection> gThreadConnection;
 static nsDataHashtable<nsStringHashKey, DBusMessage* > sPairingReqTable;
 static nsDataHashtable<nsStringHashKey, DBusMessage* > sAuthorizeReqTable;
-static nsString sDefaultAdapterPath;
 static nsTArray<uint32_t> sServiceHandles;
 
 typedef void (*UnpackFunc)(DBusMessage*, DBusError*, BluetoothValue&, nsAString&);
@@ -1269,11 +1268,8 @@ EventFilter(DBusConnection* aConn, DBusMessage* aMsg, void* aData)
       LOG_AND_FREE_DBUS_ERROR_WITH_MSG(&err, aMsg);
       errorStr.AssignLiteral("Cannot parse manager path!");
     } else {
-      sDefaultAdapterPath = NS_ConvertUTF8toUTF16(str);
-      v = sDefaultAdapterPath;
-
-      nsRefPtr<PrepareAdapterTask> b =
-        new PrepareAdapterTask(sDefaultAdapterPath);
+      v = NS_ConvertUTF8toUTF16(str);
+      nsRefPtr<PrepareAdapterTask> b = new PrepareAdapterTask(v.get_nsString());
       if (NS_FAILED(NS_DispatchToMainThread(b))) {
         NS_WARNING("Failed to dispatch to main thread!");
       }
@@ -1308,6 +1304,33 @@ EventFilter(DBusConnection* aConn, DBusMessage* aMsg, void* aData)
   }
 
   return DBUS_HANDLER_RESULT_HANDLED;
+}
+
+nsresult
+GetDefaultAdapterPath(BluetoothValue& aValue, nsString& aError)
+{
+  // This could block. It should never be run on the main thread.
+  MOZ_ASSERT(!NS_IsMainThread());
+
+  DBusError err;
+  dbus_error_init(&err);
+
+  DBusMessage* msg = dbus_func_args_timeout(gThreadConnection->GetConnection(),
+                                            1000,
+                                            &err,
+                                            "/",
+                                            DBUS_MANAGER_IFACE,
+                                            "DefaultAdapter",
+                                            DBUS_TYPE_INVALID);
+  UnpackObjectPathMessage(msg, &err, aValue, aError);
+  if (msg) {
+    dbus_message_unref(msg);
+  }
+  if (!aError.IsEmpty()) {
+    return NS_ERROR_FAILURE;
+  }
+
+  return NS_OK;
 }
 
 nsresult
@@ -1364,6 +1387,20 @@ BluetoothDBusService::StartInternal()
 
   sPairingReqTable.Init();
   sAuthorizeReqTable.Init();
+
+  BluetoothValue v;
+  nsString replyError;
+  if (NS_FAILED(GetDefaultAdapterPath(v, replyError))) {
+    // Adapter path is not ready yet
+    // Let's do PrepareAdapterTask when we receive signal 'AdapterAdded'
+  } else {
+    // Adapter path has been ready, and we won't receive signal 'AdapterAdded' later
+    // Let's do PrepareAdapterTask now
+    nsRefPtr<PrepareAdapterTask> b = new PrepareAdapterTask(v.get_nsString());
+    if (NS_FAILED(NS_DispatchToMainThread(b))) {
+      NS_WARNING("Failed to dispatch to main thread!");
+    }
+  }
 
   return NS_OK;
 }
@@ -1439,52 +1476,28 @@ public:
   Run()
   {
     MOZ_ASSERT(!NS_IsMainThread());
-    DBusError err;
-    dbus_error_init(&err);
 
     BluetoothValue v;
     nsString replyError;
 
-    DBusMessage* msg = dbus_func_args_timeout(gThreadConnection->GetConnection(),
-                                              1000,
-                                              &err,
-                                              "/",
-                                              DBUS_MANAGER_IFACE,
-                                              "DefaultAdapter",
-                                              DBUS_TYPE_INVALID);
-    UnpackObjectPathMessage(msg, &err, v, replyError);
-    if (msg) {
-      dbus_message_unref(msg);
-    }
-    if (!replyError.IsEmpty()) {
+    if (NS_FAILED(GetDefaultAdapterPath(v, replyError))) {
       DispatchBluetoothReply(mRunnable, v, replyError);
       return NS_ERROR_FAILURE;
     }
 
-    nsString path = v.get_nsString();
-    nsCString tmp_path = NS_ConvertUTF16toUTF8(path);
-    const char* object_path = tmp_path.get();
+    DBusError err;
+    dbus_error_init(&err);
 
+    nsString objectPath = v.get_nsString();
     v = InfallibleTArray<BluetoothNamedValue>();
-    msg = dbus_func_args_timeout(gThreadConnection->GetConnection(),
-                                 1000,
-                                 &err,
-                                 object_path,
-                                 "org.bluez.Adapter",
-                                 "GetProperties",
-                                 DBUS_TYPE_INVALID);
-    UnpackAdapterPropertiesMessage(msg, &err, v, replyError);
-
-    if (!replyError.IsEmpty()) {
-      DispatchBluetoothReply(mRunnable, v, replyError);
+    if (!GetPropertiesInternal(objectPath, DBUS_ADAPTER_IFACE, v)) {
+      NS_WARNING("Getting properties failed!");
       return NS_ERROR_FAILURE;
     }
-    if (msg) {
-      dbus_message_unref(msg);
-    }
+
     // We have to manually attach the path to the rest of the elements
-    v.get_ArrayOfBluetoothNamedValue().AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("Path"),
-                                                                         path));
+    v.get_ArrayOfBluetoothNamedValue().AppendElement(
+      BluetoothNamedValue(NS_LITERAL_STRING("Path"), objectPath));
 
     DispatchBluetoothReply(mRunnable, v, replyError);
 
